--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".casee"
+            android:exported="false" />
+        <activity
             android:name=".mainpage"
             android:exported="false" />
         <activity
