--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".labtask"
+            android:exported="false" />
+        <activity
+            android:name=".location_case"
+            android:exported="false" />
+        <activity
+            android:name=".opponent_details"
+            android:exported="false" />
+        <activity
+            android:name=".case_details"
+            android:exported="false" />
+        <activity
             android:name=".casee"
             android:exported="false" />
         <activity
