update manifest splas screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".fragment"
             android:exported="false" />
         <activity
-            android:name=".splash"
+            android:name=".login"
             android:exported="false" />
         <activity
             android:name=".labtask"
@@ -40,7 +40,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-        <activity android:name=".login"
+        <activity android:name=".splash"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
