--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,10 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".registration"
-            android:exported="false" />
-        <activity
-            android:name=".fragment"
+            android:name=".lawyer"
             android:exported="false" />
         <activity
             android:name=".login"
@@ -34,13 +31,16 @@
             android:name=".casee"
             android:exported="false" />
         <activity
-            android:name=".mainpage"
-            android:exported="false" />
-
-        <activity
             android:name=".MainActivity"
             android:exported="false" />
-        <activity android:name=".splash"
+        <activity
+            android:name=".registration"
+            android:exported="false" />
+        <activity
+            android:name=".fragment"
+            android:exported="false" />
+        <activity
+            android:name=".mainpage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
