--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
+            android:name=".registration"
+            android:exported="false" />
+        <activity
+
             android:name=".UPdate"
             android:exported="false" />
         <activity
