--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".about_us"
+            android:name=".MainActivity3"
             android:exported="false" />
         <activity
-            android:name=".navigationbar"
-            android:exported="false"
-            android:label="@string/title_activity_navigationbar"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:name=".about_us"
+            android:exported="false" />
+
         <activity
             android:name=".contact_us"
             android:exported="false" />
